cabal-version: >= 1.10

name: podcast
version: 0.0.0.0

build-type: Simple
category: Podcast
description: Haskell Weekly is a free weekly podcast about Haskell.
license: ISC
license-file: LICENSE.markdown
maintainer: Taylor Fausak
synopsis: A free weekly podcast about Haskell.

library
  build-depends:
    base >= 4.12.0 && < 4.13,
    bytestring >= 0.10.8 && < 0.11,
    containers >= 0.6.0 && < 0.7,
    directory >= 1.3.3 && < 1.4,
    filepath >= 1.4.2 && < 1.5,
    network-uri >= 2.6.1 && < 2.7,
    text >= 1.2.3 && < 1.3,
    time >= 1.8.0 && < 1.9,
    uuid >= 1.3.13 && < 1.4
  default-language: Haskell98
  exposed-modules:
    Podcast.Main
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: source/library
  other-modules:
    Podcast.Episodes
    Podcast.Html
    Podcast.Site.Logo
    Podcast.Type.Bytes
    Podcast.Type.Description
    Podcast.Type.Episode
    Podcast.Type.Guid
    Podcast.Type.Number
    Podcast.Type.Route
    Podcast.Type.Seconds
    Podcast.Type.Time
    Podcast.Type.Url
    Podcast.Type.Xml.Attribute
    Podcast.Type.Xml.Element
    Podcast.Type.Xml.Node
    Podcast.Xml
    Podcast.Xml.Build
    Podcast.Xml.Render

executable podcast
  build-depends: base, podcast
  default-language: Haskell98
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs
