cabal-version: 2.4

name: podcast
version: 0.0.0.0

build-type: Simple
category: Podcast
description: Haskell Weekly is a free weekly podcast about Haskell.
license: ISC
license-file: LICENSE.markdown
maintainer: Taylor Fausak
synopsis: A free weekly podcast about Haskell.

common basics
  build-depends:
    base ^>= 4.12.0,
    bytestring ^>= 0.10.8,
    containers ^>= 0.6.0,
    directory ^>= 1.3.3,
    filepath ^>= 1.4.2,
    network-uri ^>= 2.6.1,
    template-haskell ^>= 2.14.0,
    text ^>= 1.2.3,
    time ^>= 1.8.0,
    uuid ^>= 1.3.13,
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe

library
  import: basics

  exposed-modules:
    Podcast.Main
  hs-source-dirs: source/library
  other-modules:
    Podcast.Episodes
    Podcast.Episodes.Episode1
    Podcast.Episodes.Episode2
    Podcast.Episodes.Episode3
    Podcast.Episodes.Episode4
    Podcast.Episodes.Episode5
    Podcast.Episodes.Episode6
    Podcast.Episodes.Episode7
    Podcast.Episodes.Episode8
    Podcast.Episodes.Episode9
    Podcast.Episodes.Episode10
    Podcast.Episodes.Episode11
    Podcast.Episodes.Episode12
    Podcast.Episodes.Episode13
    Podcast.Html
    Podcast.Quasi
    Podcast.Site.Episode
    Podcast.Site.Feed
    Podcast.Site.Index
    Podcast.Site.Logo
    Podcast.Site.Template
    Podcast.Type.Article
    Podcast.Type.Bytes
    Podcast.Type.Date
    Podcast.Type.Description
    Podcast.Type.Episode
    Podcast.Type.Guid
    Podcast.Type.Media
    Podcast.Type.Number
    Podcast.Type.Route
    Podcast.Type.Seconds
    Podcast.Type.Source
    Podcast.Type.Title
    Podcast.Type.Transcript
    Podcast.Type.Url
    Podcast.Type.Xml.Attribute
    Podcast.Type.Xml.Element
    Podcast.Type.Xml.Node
    Podcast.Xml
    Podcast.Xml.Build
    Podcast.Xml.Render

executable podcast
  import: basics

  build-depends: podcast
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs
